@@ -40,6 +40,7 @@
 					<argLine>
 						--illegal-access=permit
 					</argLine>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
